--- a/drivers/i2c/Kconfig
+++ b/drivers/i2c/Kconfig
@@ -79,7 +79,7 @@ config I2C_PHILIPSPAR
 
 config I2C_ELV
 	tristate "ELV adapter"
-	depends on I2C_ALGOBIT
+	depends on I2C_ALGOBIT && ISA
 	help
 	  This supports parallel-port I2C adapters called ELV.  Say Y if you
 	  own such an adapter.
@@ -91,7 +91,7 @@ config I2C_ELV
 
 config I2C_VELLEMAN
 	tristate "Velleman K9000 adapter"
-	depends on I2C_ALGOBIT
+	depends on I2C_ALGOBIT && ISA
 	help
 	  This supports the Velleman K9000 parallel-port I2C adapter.  Say Y
 	  if you own such an adapter.
