--- a/drivers/input/serio/Kconfig
+++ b/drivers/input/serio/Kconfig
@@ -19,7 +19,7 @@ config SERIO
 	  as a module, say M here and read <file:Documentation/modules.txt>.
 
 config SERIO_I8042
-	tristate "i8042 PC Keyboard controller"
+	tristate "i8042 PC Keyboard controller" if EMBEDDED || !X86
 	default y
 	depends on SERIO
 	---help---
