--- a/arch/h8300/lib/Makefile
+++ b/arch/h8300/lib/Makefile
@@ -5,4 +5,4 @@
 .S.o:
 	$(CC) $(AFLAGS) -D__ASSEMBLY__ -c $< -o $@
 
-lib-y  = ashrdi3.o checksum.o memcpy.o memset.o abs.o
+lib-y  = ashrdi3.o checksum.o memcpy.o memset.o abs.o romfs.o
