--- a/drivers/char/drm/Kconfig
+++ b/drivers/char/drm/Kconfig
@@ -75,9 +75,9 @@ config DRM_MGA
 
 config DRM_SIS
 	tristate "SiS video cards"
-	depends on DRM && AGP
+	depends on DRM && AGP && FB_SIS
 	help
 	  Choose this option if you have a SiS 630 or compatibel video 
           chipset. If M is selected the module will be called sis. AGP
-          support is required for this driver to work.
+          and SiS FB support is required for this driver to work.
 
